# desafio_cientista_de_dados

./: .database_env  .env  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
dbt_project/: requirements.txt
dbt_project/models/fichas/: fichas_explodidas.sql  fichas_lida_pressao.sql  fichas_transform.sql  pressao_limites.sql  schema.yml
notebooks/: eda.ipynb  preprocessing_data.ipynb
src/: dbt_init.py  preprocessing.py
